--- a/_posts/thesis_chapters/2025-6-6-Gdps_v3.md
+++ b/_posts/thesis_chapters/2025-6-6-Gdps_v3.md
@@ -513,64 +513,46 @@ Susanna(p) and Tehillah(c) relied on the parent to do the majority of code imple
 At times Susanna asked Tehillah to seek help from facilitator. On another occasion when the child appeared bored of waiting for parent to solve a code problem, she approached the facilitator to ask for help on behalf of the adult without prompting. At other times Tehillah engages more peripheral activities such as watching older children playtest each others games, or observing community activity from under the table.
 
 
+Toby adopts different working arrangements dependent on which family members he attends with. In P1, his mother worried she had abandoned him as she worked on the game code while he concentrated on graphical assets. In P2 Toby had created his own game, coding mostly alone but situated next to his grandparents who provided attention and support (see Vignette 1). In P3, he worked in a close pairing with his father (Dan) in closely guided practice (see Vignette 6 and shorter extract as Table 6.x above). Toby and Dan's pair process is more guided and focused than many other participants and includes accessing professional documentation and Dan guiding Toby in exploration of computational thinking concepts [^eg6]. Analysis of the interaction in the session of Vingette 6 shows an emerging pattern.
+
+    Dan (p) starts as a facilitator, taking a lead from the direction of the child. As Toby(c) reaches the limits of their ability, he begins to be more directive, by asking leading questions and testing existing knowledge. Finally, in order to complete the programming or research tasks beyond the child's knowledge, the father is more direct in instruction, directing the research and proposing a coding solution for their new game design pattern.
+
+
 Madiha's(p) family Nasrin(c) and Zidane(c) are all working on separate games on different computers. While Madiha sits next to Zidane who needs closer support, Nasrin often sits close by but next to a friend. The following is and extract from  Vignette 5,
 
-    Madiha calls across the room to draw on Nasrin's help to correct a design mistake.  Nasrin appears reluctant to explain the technical processes she uses to help her mother:  "Madiha (to Nasrin): What are you doing? You have to tell me what you are doing so I can do it myself."  
+    Madiha calls across the room to draw on Nasrin's help to correct a design mistake.  Nasrin appears reluctant to explain the technical processes she uses to help her mother:  "Madiha (to Nasrin): What are you doing? You have to tell me what you are doing so I can do it myself." Nasrin undertakes a process of using the graphical editing tool. "Madiha: How did you do that so quickly? I’ve got to like, carefully..." As she speaks, Madiha makes hand gestures to show a sense of hesitant keyboard use. In response, Nasrin bounces up in place and smiles broadly.
 
 Madiha and Nasrin reversed the traditional helping relationship, and the child would reluctantly implement the parent's requested technical elements of GDPs but would pointedly not explain the changes made, seemingly taking pride in knowing something that her mother didn't.
 
-Madiha as part of her process of building an emerging identity as a graphical asset designer (see V5.b),
-Nasrin affects reluctance in her support of her mother, but at other times shows that she enjoys her status of technical supporter (see V5.d). This may be driven by a desire to preserve this specialist status and utility to her mother.
+Vignette 5 shows Madiha(p) building an emerging identity as a graphical asset designer, compared to other coding tasks, this is something that she does want to build her competency in. Nasrin affects reluctance in her support of her mother, but at other times shows that she enjoys her status of technical supporter (see reflective commentary in Vignette).
 
 In Vignette 3, Mark(p) and Ed(c) break out of a dysfunctional division of labour in the penultimate P2 session [^pl].  
 
-For much of the first part of the session Mark takes a significant amount of time puzzling over documentation on how to add animation to a character. This results in Ed being blocked from progressing and to address this tension child proposes dividing their labour and working on two separate computer. "Ed: Why don’t you go there for a computer and you can do that?". A BIT MORE DIALOG - WHAT WILL D YOU DO?  Mark fetches a new computer to continue his focused research but soon joins in Ed(c)'s exploration of sound-making software. They start a process of tinkering and messing about with the capability of music-making tools in a way that spurs creativity.
-
-Ed appears to make a tactical decision allowing the father to specialise in GDPs that involve deciphering technical instructions, whilst he engages with a pattern that involves creating audio and graphical assets in a less technical, more exploratory process. In doing so Ed(c) break out of the more restrictive approach of _plodding_ that Mark(p) advocated for to engage in experimental, improvised design processes with no clear end goal.
-
-In this case, the joint improvised process sparks a new proposal to incorporate the two soundtracks they create in distinct levels.
-
-
-
-
-Toby adopts different working arrangements dependent on which family members he attends with. While in P2 when supported by grandparents Toby had worked mostly alone (see V1), in P3, he works as a pair with his father (Dan) in closely guided practice (see V7.b). In several interchanges, the father starts as a facilitator, taking a lead from the direction of the child. As the child reaches the limits of their ability, he begins to be more directive, by asking leading questions and testing existing knowledge. Finally, in order to complete the programming or research tasks beyond the child's knowledge, the father is more direct in instruction, directing the research and proposing a coding solution for their new game design pattern. Dan's experience as a software engineer and volunteer at Coder Dojo (see glossary) is relevant as a fund of knowledge he draws on (see V7.a and later section).
-
-
-
-<!-- **Leveraging the possibilities of emerging divisions of labour** -->
-
-
-Toby and Dan's pair process is more guided and focused than many other participants and includes accessing professional documentation and exploration of computational thinking concepts.
-
-
-
-
-
-
+    For much of the first part of the session Mark takes a significant amount of time puzzling over documentation on how to add animation to a character. He reads aloud from documentation. "Mark:. In the create function...". He breaks off to comment on the difficulty involved. "Mark: Quite complicated. But we can do it. But it would mean a lot of mucking around....It’s like a project in itself really."  Ed is left inactive and seemingly address this tension child proposes dividing their labour and working on two separate computers. Ed points to the cupboard in which laptop computers are kept and comments. "Ed(c): Why don’t you go there for a computer and you can do that?"  Mark(p): Why? What? While you’re doing what? Ed: Um making a sound track or something. I could do something like that." Mark fetches a new computer to continue his focused research but soon joins in Ed's exploration of sound-making software. They start a process of tinkering and messing about with the capability of music-making tools in a way that spurs creativity.
 
 **Commentary**
-Turning now to commentary and discussion we can see the emergence of several themes in the examples above.  
-A list?  including: working knowledge of different types of GDPs can help participants to divide work by working on different patterns or taking on project elements within patterns.
 
-Addressing division of labour on an interpersonal plane, participants worked mostly as pairs or individuals, alternating between community playtesting and pair/individual design work.
+Turning now to commentary and discussion in summary these examples show the use of GDPs as an organisational strategy, structuring work processes in diverse ways. On a structural level, in alignment with the framing outlined at the start of this chapter, the conceptualisation of each GDPs as a object of an activity system nested within the broader activity of game making allows greater understanding and flexibility regarding division of labour at play.
 
-The use of GDPs as an organisational strategy, structuring work processes through implementing modular sub-projects in the form of GDPs can aid division of labour.
+The decision to work on a different GDPs can help participants maintain flow and engagement. In the above example Ed chooses a different GDP to work on to avoid disengagement. Ed appears to make a tactical decision allowing the father to specialise in GDPs that involve deciphering technical instructions, whilst he engages with a pattern that involves creating audio and graphical assets in a less technical, more exploratory process. In doing so Ed(c) break out of the more restrictive approach of _plodding_ that Mark(p) advocated for to engage in experimental, improvised design processes with no clear end goal [^imp].
 
-Data uncovered  ways in which the participant divided the process of game making, in ways which uncovered traces of home collaboration practices.
-For example, Toby and Dan's pair process of accessing professional documentation also illustrated an aspect of their family learning culture.
+In contrast some participants took on different roles while working on the same pattern and the same computer. For example, Tehliah designing an enemy, and placing within level design as her mother codes the pattern [^gw].
 
-While Tehillah's activity away from the screen  while non-productive within the scope of technical progress, can be characterised as legitimate peripheral activity of observation of community activity [@lave_situating_1991 ; @rogoff_learning_2014].  Indeed the possibility for children to _not_ engage in community activities is seen by Rogoff [-@rogoff_cultural_2003; -@rogoff_organization_2016] as an important characteristics in participation based models of learning.
+Similarly, some young people and parents began to take on specialist and distributed roles related to a developing identity. This is present in the example of Nasrin(c) and Madiha(p) in Vignette 5 where both are oriented to developing higher quality graphical assets, but Nasrin also adopts a technical support role for her mother.  
 
-
-For example, research shows that children have the potential to help parents as technology brokers [@correa_brokering_2015]. In joint technology work, parents can fulfil several reciprocal roles including collaborator, resource provider, learner, non-technical consultant, and emotional support [@barron_parents_2009].
-
-Thus, in response to the creative support that parents and siblings provide, facilitators should design learning environments to facilitate these possibilities. The work of Roque provides guidance for helpers in the process to support parents to value and feel confident in these roles [@roque_im_2016] in a way which mirrors the use of helpers in this phase of my study (see Chapter 4).
+Data also uncovered  ways in which the participant divided the process of game making, in ways which uncovered traces of home collaboration practices. For example, Toby and Dan's pair process of accessing professional documentation also illustrated an aspect of their family learning culture [^cd].
 
 
-The variety of repertoires of helping practice depends in part on the different funds of knowledge the parent has access to. The helping pattern of researching and accessing technical documentation is not available to all pairs, due to the level of skill and experience involved.
+The analysis here contributes grounded examples to existing strands of research addressing division of labour within CGD&P and related learning in informal technology settings.
 
-**qualifications**
-While the context of the participants as families involved in home education makes any general claims difficult, these observations support findings in other research in this domain.
+Tehillah(c)'s activity away from the screen, such as hiding under the tables and observing others, while non-productive within the scope of technical progress, can be characterised as legitimate peripheral activity of observation of community activity [@lave_situating_1991 ; @rogoff_learning_2014]. Indeed the possibility for children to observe and _not_ engage directly in community activities is seen by Rogoff [-@rogoff_cultural_2003; -@rogoff_organization_2016] as an important characteristic in participation-based models of learning. While the value of this process of _messing around_ is explored in informal learning environments by Ito [-@ito_hanging_2010] and Gee [-@gee_situated_2004][^ito], it is less explored in CGD&P research, especially in this non-formal setting [^clar].
+
+NOT CLEAR HOW THIS IS RELATED TO GDPS SPECIFICALLY.
+The work on social and secret missions in P3 has potential to support culturally focused activities.(explored later?)
+
+Taken together, the observations above provide a case study suitable to inform practitioners looking to benefit from related research on informal emerging roles within joint technology work. The work of Barron et al. [-@barron_parents_2009], shows parents fulfilling several informal roles including collaborator, resource provider, learner, non-technical consultant, and emotional support. The work of Roque [-@roque_im_2016] provides guidance for helpers in the process to support parents to value and feel confident in these roles. Other research shows the potential children have to help parents as technology brokers [@correa_brokering_2015]. As a relevant contribution, my research shows the potential utility of GDPs to nurture the emergence of organic and flexible divisions of a labour and specialist roles.
+
+As a limitation however, the variety of repertoires of helping practice depends in part on the different funds of knowledge the parent and young people have access to. For example, the helping pattern of researching and accessing technical documentation is a key element of Dan and Toby's working practices. In several interchanges, is not available to all pairs, due to the level of skill and experience involved. Dan's experience as a software engineer and volunteer at informal coding clubs is relevant as a fund of knowledge he draws on[^fk]. Similarly, the context of the participants as families involved in home education makes any general claims difficult. These families are used to learning and working together on projects, they have developed skills and practices which they are able to bring to bear in this activity but which may not be shared by participants in other contexts.
 
 
 <!-- While these following observations are more generally inked to the overall design process rather than the specific note they are of value to RQ2 on developing agency. -->
@@ -617,11 +599,12 @@ Once the code for the new game mechanic has been added, the child is guided to t
 
 ## Use of GDPs in the cultural plane / community level of activity
 
-Continuing the three planes approach to analysis [@rogoff_observing_1995], the following section explores the use of GDPs at the community plane of activity. Rogoff's [-@rogoff_observing_1995] initial analysis of activity on a cultural plane focused on existing communities emphasising the metaphor of apprenticeship. In later later work with Gutiérrez [@gutierrez_cultural_2003], there is a greater work on places greater emphasis on cultural activity as dynamic. This perspective examines existing and emerging norms and repertoires, adapted from participants’ engagement in other communities and contexts. Gutiérrez [-@gutierrez_developing_2008] continued this line of reasoning to advance the concept of third spaces in education as a space where the repertoires of the repertoires of home meet and can mix with those of more formal schooling. This section explores the findings of existing and emerging cultural activity within this conceptual framework.
+Continuing the three planes approach to analysis [@rogoff_observing_1995], this section explores the use of GDPs at the cultural or community plane of activity. Rogoff’s initial discussion of the cultural plane focused on established communities of practice, using the metaphor of apprenticeship to explain how shared norms and practices are taken up by newcomers [-@rogoff_observing_1995]. In later work with Gutiérrez, she shifted toward a more dynamic interpretation, placing greater emphasis on cultural activity as contested and emergent [@gutierrez_cultural_2003]. This perspective foregrounds the role of participants in shaping new repertoires by drawing on knowledge and practices from other communities. Gutiérrez [-@gutierrez_developing_2008] further extended this view through the concept of *third space*, where the repertoires of home and community can mix with those of formal schooling.  While the previous section focused on guided participation and the interpersonal mediation of learning, the emphasis here shifts toward the development of shared repertoires, community norms, and the propagation of practices across the wider learning environment. Within this conceptual framing, the following sections explore how GDPs were taken up and repurposed within both existing and emerging repertoires, as part of the cultural activity of the learning community.
+
 
 ### The role of GDPs to facilitate learners to design for others
 
-The use of GDPs, particularly during playtesting, can support the process of imagining end-user experiences. This section examines how the concept of, and experience with, implementing GDPs encouraged participants to envision the experience of end users of their games. Chapter 2 explored the proposition from professional and participatory design processes that design should be informed by end-user experience [@redstrom_towards_2006], as well as the challenges involved in undertaking such an *"operationalization of empathy"* [@surma-aho_conceptualization_2022, p.1]. From a CHAT interpretation, this process involves shifts in perspective by participants as they engage with objectives across different scopes of activity.
+The use of GDPs, particularly during playtesting, can support the process of imagining end-user experiences. This section examines how the concept of, and experience with, implementing GDPs encouraged participants to envision the experience of end users of their games.
 
 In the extract of Vignette 2, Tehillah (c) pursues a quirky design goal during her paired design work, which Susanna (p) resists. Imagining a shift in perspective to the intended audience at a community level of interaction, the parent aims to ensure a sense of challenge for the imagined player.
 
@@ -640,10 +623,17 @@ In the extract of Vignette 2, Tehillah (c) pursues a quirky design goal during h
 
 Susanna(p)'s alarm at the child's deletion of all elements of hazard shows she has a sense of game balance to ensure a sense of challenge for the imagined player. "It's no fun having a game without any hazards to avoid." However, Tehillah (c) seems determined to remove all hazards. *"It is for me!"* she counters. My understanding is that she is may be aware of the implications for game balance but takes pleasure in this destruction of the key challenge of the game as an act of disruptive play. A later interaction with a peer shows that Tehillah (child) is indeed imagining the experience of the audience. *"I like making it frustrating. That other people find it frustrating!"* Tehillah (child) notes the persistence of a student helper who pushes past her frustration to complete the game. Her remark, *"If people tried hard they would get to my level,"* shows her awareness that not all players will persist in the same way to reach her final level, which has only rewards and no hazards. This being a *"secret, special"* experience, which plays against the norms of platform game design, is thus intended to provoke player surprise.
 
-In contrast other participants created extremely challenging or impossible game levels that frustrated other players.
-DEVELOP THIS A BIT MORE WITH QUICK EXAMPLES.
+Some other participants (Toby, Nasrin and R ) created extremely challenging or impossible game levels that frustrated other players. However not all participants were so aware of participants experience of game dynamic even with community guidance. Vignette 4 outlines several, sequential episodes of participant feedback on the level of the player challenge of Madiha's game. The discussion of game challenge, specifically comments about how 'hard' participant games were, was a particularly common interaction during playtesting. Vignette 4 (V4.a) outlines the community norming of Madiha(p)'s game to conform to expected standards of a platform game. The vignette shows varied attempts to influence Madiha to change the game variables to make controlling her player avatar less frustrating.  The indirect norming behaviours described in Vignette 4 mirror observations seen in the work of Rogoff and colleagues [@rogoff_cultural_2003] on learning in community settings. It appears that community norms of gameplay related to challenge began to develop, some of which were influenced by home experience of game playing.  
 
-This example serve to highlight two dimensions of the use of GDP concepts to facilitate the process of designing for others. The first is the influence of making in a cultural setting where regular playtesting by peers occurs on the making process. The second is through either direct advice by pair partners and peers in playtesting to imagining others' user experience, or indirectly by gameplay feedback or suggesting alterations to GDP implementations. This research is in line with the interpretation within computer supported collaborative learning of the value of the  of tangible, public digital products as both a motivating and focusing factor in computer-supported collaborative learning (CSCL) [@xambo_experience_2017; @fields_programmers_2015]. The results here are valuable as a contribution help address a deficit of results in the use of CSCL to support computer programming [@silva_computer-supported_2020].
+
+**Commentary**
+
+
+These examples serve to highlight two dimensions of the use of GDP concepts to facilitate the process of designing for others. The first is the influence of making in a cultural setting where regular playtesting by peers occurs on the making process. The second is through either direct advice by pair partners and peers in playtesting to imagining others' user experience, or indirectly by gameplay feedback or suggesting alterations to GDP implementations. This research is in line with the interpretation within computer supported collaborative learning of the value of the  of tangible, public digital products as both a motivating and focusing factor in computer-supported collaborative learning (CSCL) [@xambo_experience_2017; @fields_programmers_2015]. The results here are valuable as a contribution help address a deficit of results in the use of CSCL to support computer programming [@silva_computer-supported_2020].
+
+MOVED HERE INTEGREATE UP
+Chapter 2 explored the proposition from professional and participatory design processes that design should be informed by end-user experience [@redstrom_towards_2006], as well as the challenges involved in undertaking such an *"operationalization of empathy"* [@surma-aho_conceptualization_2022, p.1]. From a CHAT interpretation, this process involves shifts in perspective by participants as they engage with objectives across different scopes of activity.
+
 
 <!-- While Susanna(p) imagine a user experience and make a playable game conforming to her perception of norms, Tehillah's(c) playful imagining of the experience of a more immediate audience of fellow game makers and supporting students appears to provide a tangible motivation with rapid rewards.
 wider goal of making an engaging game if it interferes with the engagement of the test users. -->
@@ -663,40 +653,62 @@ E.g. The use of GDPs to facilitate learners to design for others was present in 
 
 <!-- **Ending / Transition - Other examples and interpretation on designing for others / shifts of perspective** -->
 
-### GDPs can facilitate the use of wider funds of knowledge and interest
+### GDPs can facilitate the use of wider repertoires of practice,interest and funds of knowledge
 
 <!-- THIS NEEDS TO BE MUCH MORE GROUNDED IN DATA - MOVE THEORY OUT -->
 
-Existing research outlines the motivations for social making incorporating cultural knowledge of gaming within non-formal making activities [@ito_hanging_2010; @gee_what_2003]. Similarly, the ability to make personalised game assets and narratives and sustain engagement in digital making projects [@sefton-green_mapping_2013].
+This section outlines some of the ways GDP concepts can facilitate the incorporation of participants interests from outside this learning space, and wider repertoires of practice [^rpp].
+In Chapter 5 and Appendix.tech.gameframework I outlined the use of the MDA (mechanics, dynamics, and aesthetics) framework to theme the presentation of GDPs. In the following section I use the MDA themes to explore different examples of use of repertoires of home interests by participants.
 
-Existing constructivist research in CGD&P also highlight the motivating potential of incorporating home interests in games, coding and media projects [@kafai_constructionist_2015; @resnick_mothers_2012; @papert_mindstorms:_1980]]
-
-
-Cocio-cultural research on the tactical use of FoK to overcome barriers to technical environments [@gutierrez_learning_2019-1; @moje2001maestro].
-
-Research related to project based learning (PBL) benefits of working with participants' home interests with project work include to motivate participants in initial stages [@swirski_does_2018-1; @penuel_connecting_2022], sustain activity and overcome problems in order to share the personalised object created [@barron_conceptualizing_2010; @barron_interest_2006-1].
-
-
-In Chapter 5 and Appendix.tech.gameframework I outlined the use of the MDA (mechanics, dynamics, and aesthetics) framework to theme the presentation of GDPs.
-In the following section I use the MDA themes to explore different examples of use of repertoires of home interests by participants.
+To do this, I change the section structure package description and discussion together? DO I?
 
 <!-- ![Illustration 6.x -  MDA as an additional framework promoting multiple means of engagement - mapped to an grouping of GDPs  ](./Pictures/ch_6_mda_dia_2.png){width=95%}
-
 PERHAPS CHANGE THE GRAPHIC TO A TABLE HERE.
 DVELOP THIS A BIT OR LINK TO ANOTHER BIT EXPLORING THIS -->
 
 
-Some participants focused their game making on the aesthetics of their projects. Madiha in the vignette extract above show identification (as an _expert pixel_) with the graphical-making process. Many examples of session data (see Vignette 5) confirm this preference for both Madiha(p) and her daughter Nasrin(c) and interview data shows that this art is also an interest that they pursue at home. Beyond their internal family interaction, the process of bringing that aspect of creativity into their games allows them to share this artistic flair and attention to detail with the emerging learning community. In another example, Mark and Ed designed a game around the character of a train driver that needed to collect coal. In interview data Mark describes the impact of the child feeling like they could bring their own identity and interest into the project. "I know just your eyes lit up when you realised you could expand your interests into gaming." (see Appendix 4.x). Clive(p) and Pearl(p), the grandparents of Toby(c), included a narrative message at the start of their game surfacing the interest and expertise of the family as beekeepers (see Vignette 6) in a way that sparked interest and conversations with other participants.
+The process of working with the game dynamics has already been addressed in the examples of the previous section.  
+ADD SOME COMMENTARY?
+
+Turning to aesthetics, some participants oriented their game making primarily around the aesthetic appeal of their projects. Madiha in the vignette extract above showing identification (as an _expert pixel_) with the graphical-making process. Many examples of session data (see Vignette 5) confirm this preference for both Madiha(p) and her daughter Nasrin(c) and interview data shows that this art is also an interest that they pursue at home. NOW POSSIBLE DUPLICATION WITH ABOVE.
+
+Beyond their internal family interaction, the process of bringing that aspect of creativity into their games allows them to share this artistic flair and attention to detail with the emerging learning community. IS THIS COMMENTARY?
+
+In another example, Mark and Ed designed a game around the character of a train driver that needed to collect coal. In interview data Mark describes the impact of the child feeling like they could bring their own identity and interest into the project. "I know just your eyes lit up when you realised you could expand your interests into gaming." (see Appendix 4.x). Clive(p) and Pearl(p), the grandparents of Toby(c), included a narrative message at the start of their game surfacing the interest and expertise of the family as beekeepers (see Vignette 6) in a way that sparked interest and conversations with other participants.
 
 
-Addressing game dynamics, Vignette 4 gives several examples of participant feedback on the dynamics of Madiha's game in the level of the challenge experienced by players. Community norms of gameplay began to develop, some of which were influenced by home experience of game playing.  The discussion of game challenge, specifically comments about how 'hard' participant games were, was a particularly common interaction during playtesting. Vignette 4 (V4.a) outlines the community norming of Madiha(p)'s game to conform to expected standards of a platform game. The vignette shows varied attempts to influence Madiha to change the game variables to make controlling her player avatar less frustrating.  The indirect norming behaviours described in Vignette 4 mirror observations seen in the work of Rogoff and colleagues [@rogoff_cultural_2003] on learning in community settings.
+
+Jumping to game mechanics, In Vignette 1 (See  - Reflective commentary – Peer propagation and community uptake of GDPs.)  Bertie(c) makes comments on Toby(c)'s game, which has a dominant game experience of timed jumping: "Berie: It’s like parkour in Minecraft but timed. It’s like playing the game Wipeout. Have you ever played Wipeout?". Parkour in Minecraft and Wipeout are both game experiences whose main gameplay mechanic is about judging jumps and landing accurately. Bertie makes links to his existing experience of games, making comparisons between Toby's game, commercial games, and his own. In doing so, Bertie is able to show his knowledge and analysis of gameplay patterns. Additionally, the guidance of Dan(p) for Toby(c) explored above in Vignette 7, saw the parent explicitly drawing out the child's home knowledge of games to enable an exploration of a different set of game mechanics.
+
+**Commentary**
+
+The examples above give an overview of how the tacit knowledge of GDPs of both children and adults as game players serves them in knowledge-brokers roles in the process of feeding back and ideation [@wenger_communities_1998].
+
+The previous examples have outlined varied was that  participants used GDPs in incorporating elements of home funds of knowledge and interest into their games. I observed that families and individuals who were less intrinsically interested in the gaming often engaged with the aesthetics elements of the graphical or audio design or the cast of characters the narrative of the game.
+
+In summary, GDP concepts allow participants to share and explore funds of knowledge and interest [@fasso_identity_2020; @esteban-guitart_funds_2014] related to gaming culture [@ito_hanging_2010; @livingstone_digital_2018] in the emerging learning community.
+
+While existing work on computational design patterns by Repenning et al. [-@repenning_scalable_2015] addresses the motivational value of working with known games types, and the patterns as a way of scaffolding the process of programming, it is limited in the way it addresses aspect of choice when of drawing on home interests.
+
+In contrast, the different types of GDPs available to participants to choose from in the menu of GDP documentation and code snippets allowed for a choice in participant making paths, enabling alignment with home interests.
+
+As a contribution this area of research,  I propose that the diversity and subdivision of a menu of GDPs aligned with the MDA framework can help participants to elect to follow varied learning pathways based on their home interests in a way which aligns with characteristics of the inclusive pedagogy [@sanger_inclusive_2020].
+THIS FEELS LIKE DUPLICATION WITH THE ABOVE NOW. 
+
+Specifically, this is achieved by providing scaffolding and resources which allow exploration of concepts which providing multiple means of engagement with the learning process [@capp_effectiveness_2017].
 
 
-Turning to the area game mechanics, In see V1.b Bertie(c) comments on Toby(c)'s game, which has a dominant game experience of timed jumping: *"It’s like parkour in Minecraft but timed. It’s like playing the game Wipeout. Have you ever played Wipeout?"*. Parkour in Minecraft and Wipeout are both game experiences whose main gameplay mechanic is about judging jumps and landing accurately. Bertie makes links to his existing experience of games, making comparisons between Toby's game, commercial games, and his own. In doing so, Bertie is able to show his knowledge and analysis of gameplay patterns. Additionally, the guidance of Dan(p) for Toby(c) explored above in Vignette 7, saw the parent explicitly drawing out the child's home knowledge of games to enable an exploration of a different set of game mechanics. Thus, the tacit knowledge of GDPs of children and adults as game players serves them in knowledge-brokers roles in the process of feeding back and ideation [@wenger_communities_1998].
+MOVED DOWN
+Existing research outlines the motivations for social making incorporating cultural knowledge of gaming within non-formal making activities [@ito_hanging_2010; @gee_what_2003].
 
-The previous examples have outlined varied was that  participants used GDPs in incorporating elements of home funds of knowledge and interest into their games. I observed that families and individuals those less intrinsically interested in the gaming often engaged with the aesthetics elements of the graphical or audio design or the cast of characters the narrative of the game.
+Similarly, the ability to make personalised game assets and narratives and sustain engagement in digital making projects [@sefton-green_mapping_2013].
 
-In summary, GDP concepts allow participants to share and explore funds of knowledge and interest [@fasso_identity_2020; @esteban-guitart_funds_2014] related to gaming culture [@ito_hanging_2010; @livingstone_digital_2018] in the emerging learning community. While existing work on computational design patterns by Repenning et al. [-@repenning_scalable_2015] addresses the motivational value of working with known games types, and the patterns as a way of scaffolding the process of programming, it does not address any aspect of choice when of drawing on FoK when creating games. In contrast, the different types of GDPs available to participants to choose from in the menu of GDP documentation and code snippets allowed for a choice in participant making paths, enabling alignment with home interests. As a contribution this area of research,  I propose that the diversity and subdivision of a menu of GDPs aligned with the MDA framework can help participants to elect to follow varied learning pathways based on their home interests in a way which aligns with characteristics of the inclusive pedagogy [@sanger_inclusive_2020]. Specifically, this is achieved by providing scaffolding and resources which allow exploration of concepts which providing multiple means of engagement with the learning process [@capp_effectiveness_2017].
+Existing constructivist research in CGD&P also highlight the motivating potential of incorporating home interests in games, coding and media projects [@kafai_constructionist_2015; @resnick_mothers_2012; @papert_mindstorms:_1980]]
+
+
+Socio-cultural research on the tactical use of FoK to overcome barriers to technical environments [@gutierrez_learning_2019-1; @moje2001maestro].
+
+Research related to project based learning (PBL) benefits of working with participants' home interests with project work include to motivate participants in initial stages [@swirski_does_2018-1; @penuel_connecting_2022], sustain activity and overcome problems in order to share the personalised object created [@barron_conceptualizing_2010; @barron_interest_2006-1].
 
 
 <!-- A wider exploration of use of FOK in the programme related to art and narrative is explored in chapting behaviourser six.
@@ -1362,6 +1374,22 @@ Returning to Kynigos's interpretation of the half-baked game as a boundary objec
 [^st1]: An example of this transfer is in the vignette extract earlier in the chapter  in Table 6.x. A fuller description is in Vignetted 2.
 
 [^pl]: Mark(p) repeatedly steers Ed(c) to pick one GDP to allow them to carefully work through the associated documentation together, a process he later refers to in interview data  as _plodding_ . See interview extract in Vignette 3.
+
+[^eg6]: An example is the use of the console to explore variables, and the use of conditional statements.
+
+[^clar]: To clarify informal and non-formal see Chapter ?, In short non-formal here reflects that these are regular sessions and are structured even if that facilitation is with a light touch.
+
+[^imp]: In this case, the joint improvised process sparks a new proposal to incorporate the two soundtracks they create in distinct levels.
+
+[^gw]: This process differs from the division of labour in P1 in that the graphical design is wrapped within this iteration of applying a GDP
+
+[^cd]: See Vignette 6 for interview data with Dan showing his involvement with coding and supporting informal family coding activities at Coder Dojo events.
+
+[^ito]: Their work is explored in context in the introduction.
+
+[^fk]: see Vignette 6 and the later section of this chapter on repertoire use.
+
+[^rpp]: The concept of repertoires of practice and how they move and transform as learners enter different spaces is outlined in Chapter 3 [@gutierrez_cultural_2003].
 
 <!-- STRUCTURE VIA THIS MINI TEMPLATE
 
